k8s/services.yaml
# k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stub-node-service
  labels:
    app: stub-node
spec:
  selector:
    app: stub-node
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: game-server-service
spec:
  selector:
    app: game-server
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
      nodePort: 30051
    - name: metrics
      protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: validation-server-service
spec:
  selector:
    app: validation-server
  ports:
    - name: grpc
      protocol: TCP
      port: 50052
      targetPort: 50052
      nodePort: 30052
    - name: metrics
      protocol: TCP
      port: 8002
      targetPort: 8002
  type: LoadBalancer
