k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bingo-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bingo-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stub-node-service
                port:
                  number: 8080
